<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/com_facebook_button_login_silver_background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.villegas.raul.firebase.UpdatePasswordActivity"
    tools:showIn="@layout/activity_update_password"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle">


    <!-- Change Password Layout with Spaces -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/updateprofileusername"
            android:layout_marginRight="5dp"
            android:layout_alignLeft="@+id/currPasswordField"/>

        <EditText
            android:id="@+id/currPasswordField"
            android:hint="@string/hint_curr_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:inputType="textPassword"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/com_facebook_button_login_silver_background_color"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/updateprofileusername"
            android:layout_marginRight="5dp"
            android:layout_alignLeft="@+id/newPasswordField"/>
        <EditText
            android:id="@+id/newPasswordField"
            android:hint="@string/hint_new_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/updateprofileusername"
            android:layout_marginRight="5dp"
            android:layout_alignLeft="@+id/cNewPasswordField"/>
        <EditText
            android:id="@+id/cNewPasswordField"
            android:hint="@string/hint_conf_new_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp" />

    </LinearLayout>




</LinearLayout>
